Switch to using spark-submit.