@@ -6,7 +6,7 @@ version := "0.1"
 
 organization := "org.spark-project"
 
-scalaVersion := "2.9.3"
+scalaVersion := "2.10.4"
 
 libraryDependencies += "org.clapper" % "argot_2.9.2" % "0.4"
 
@@ -20,18 +20,15 @@ libraryDependencies += "org.slf4j" % "slf4j-log4j12" % "1.7.2"
 
 // libraryDependencies += "org.apache.hadoop" % "hadoop-client" % 1.0.4
 
-// Assumes that the 'base' directory is 'perf-tests/spark-tests' and that the Spark repo is cloned
-// to 'perf-tests/spark'.
-unmanagedJars in Compile <++= baseDirectory map  { base =>
-  val finder: PathFinder = (file("../spark/assembly/target")) ** "*assembly*hadoop*.jar"
-  finder.get
-}
+libraryDependencies += "org.apache.spark" %% "spark-streaming" % "1.0.0" % "provided"
 
 assemblySettings
 
 test in assembly := {}
 
 outputPath in assembly := file("target/streaming-perf-tests-assembly.jar")
+
+assemblyOption in assembly ~= { _.copy(includeScala = false) }
 
 mergeStrategy in assembly <<= (mergeStrategy in assembly) { (old) =>
   {
@@ -47,13 +44,3 @@ mergeStrategy in assembly <<= (mergeStrategy in assembly) { (old) =>
     case _ => MergeStrategy.first
   }
 }
-
-fork in run := true
-
-javaOptions in run ++= Seq(
-  // "-Dspark.speculation=true",
-  //"-Dspark.shuffle.sync=false",
-  "-XX:+UseConcMarkSweepGC",
-  "-Duser.dir=/Users/tdas/Projects/Spark/spark-perf/",
-  "-Dhello=morgan"
-)
